# iccma-dynamics-wrapper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
local_crates/crusti_app_helper-v0.1/: Cargo.toml
local_crates/crusti_app_helper-v0.1/src/: lib.rs
local_crates/crusti_app_helper-v0.1/src/app_helper/: app_helper.rs
local_crates/crusti_app_helper-v0.1/src/cli_manager/: cli_manager.rs
local_crates/crusti_arg-v0.3-alpha/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
local_crates/crusti_arg-v0.3-alpha/src/: lib.rs
local_crates/crusti_arg-v0.3-alpha/src/aa/: aa_framework.rs  arguments.rs  mod.rs
local_crates/crusti_arg-v0.3-alpha/src/aa/io/: aspartix_reader.rs  aspartix_writer.rs  mod.rs  solutions.rs
local_crates/crusti_arg-v0.3-alpha/src/utils/: mod.rs  warning_result.rs  writable_string.rs
src/: main.rs
src/app/: mod.rs  wrap_command.rs
utils/: fake-solver.sh
