[package]
name = "crusti_arg"
version = "0.3.0"
license = "GPL-3.0-only"
authors = ["Lonca Emmanuel <lonca@cril.fr>"]
edition = "2018"
publish = false
categories=["encoding", "science"]
keywords = ["argumentation", "abstract", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
lazy_static = "1.4.0"
regex = "1.3.9"